@@ -1,6 +1,4 @@
-import FormInput from './FormInput'
-import Button from './Button'
 import LinkCustom from './LinkCustom'
 import FormWrapper from './FormWrapper'
 
-export { FormInput, Button, LinkCustom, FormWrapper }
+export { LinkCustom, FormWrapper }
